# 2025

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  test_main.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_clases_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_clases_py.html
src/: clases.py  main.py
tests/: test_clases.py  test_main.py
