[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Daria"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
funcs = "^0.11.0"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"
coverage = "^7.10.6"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
